--- a/LeadScoringProject.ipynb
+++ b/LeadScoringProject.ipynb
@@ -758,6 +758,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Observation**\n",
+    "\n",
+    "- Terlihat anomali positif yang mencolok pada dua kelompok ekstrem: Retired (Pensiunan) dan Student (Pelajar).\n",
+    "\n",
+    "- Pada batang Retired, jumlah \"Yes\" (Biru Tua) jauh lebih tinggi daripada \"No\" (Hijau). Ini adalah satu-satunya kategori pekerjaan di mana pembeli melebihi penolak.\n",
+    "\n",
+    "- Sebaliknya, pada Blue-collar (Buruh), batang hijau (No) menjulang tinggi, menandakan tingkat penolakan yang masif."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Business Insight**\n",
+    "\n",
+    "Produk Deposito paling laku di kalangan nasabah yang memiliki likuiditas tunai tinggi dan tanggungan utang rendah. Pensiunan (memiliki uang pesangon) dan Pelajar (menabung untuk masa depan/didukung orang tua) adalah Segmen Premium. Sebaliknya, pekerja kerah biru (Blue-collar) cenderung fokus pada kebutuhan harian, sehingga sulit menyisihkan uang untuk deposito."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Strategic Recomendation**\n",
+    "\n",
+    "- Prioritas Sales: Alokasikan 60% sumber daya telepon untuk menghubungi database Pensiunan dan Pelajar.\n",
+    "\n",
+    "- Efisiensi: Kurangi prioritas panggilan ke segmen Blue-collar kecuali mereka memiliki saldo (balance) yang sangat tinggi."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Peluang Deposito berdasarkan Riwayat Kampanya Sebelumnya"
    ]
   },
@@ -783,6 +819,45 @@
     "plt.title('Peluang Deposito Berdasarkan Riwayat Kampanye Sebelumnya')\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observation**\n",
+    "\n",
+    "- Pada kategori success (kanan). Batang biru muda (Yes) mendominasi secara mutlak, hampir tidak ada batang oranye (No).\n",
+    "\n",
+    "- Pada New Customer (kiri), di mana batang oranye (No) jauh lebih tinggi daripada biru."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Business Insight**\n",
+    "\n",
+    "Sejarah adalah prediktor terbaik masa depan. Nasabah yang pernah membeli produk bank di masa lalu (outcome=success) memiliki tingkat konversi hampir 90%. Mereka sudah percaya pada bank. Sebaliknya, mengakuisisi nasabah baru (New Customer) jauh lebih sulit dan berisiko ditolak."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Strategic Recomendation**\n",
+    "\n",
+    "\"Low Hanging Fruit\" Strategy, dimana etiap pagi, tim sales wajib menghabiskan daftar nasabah kategori success terlebih dahulu sebelum menghubungi nasabah baru. Ini adalah guaranteed sales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
