"Modeling Leads Scoring"

--- a/LeadScoringProject.ipynb
+++ b/LeadScoringProject.ipynb
@@ -853,11 +853,283 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling Scoring Machine"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_model = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'duration' in df_model.columns:\n",
+    "    df_model.drop(columns=['duration'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ubah Target (deposit) jadi Angka 1 dan 0\n",
+    "target_col = 'deposit' \n",
+    "df_model[target_col] = df_model[target_col].map({'yes': 1, 'no': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ubah data teks menjadi angka (One-Hot Encoding)\n",
+    "df_final = pd.get_dummies(df_model, drop_first=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_final.drop(target_col, axis=1) \n",
+    "y = df_final[target_col]              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data Splitting\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Selesai\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Training\n",
+    "model = RandomForestClassifier(n_estimators=100, max_depth=10, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Training Selesai\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Leads Scoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Buat model memprediksi Probabilitas (Peluang) untuk data testing\n",
+    "# probability[:, 1] artinya kita ambil peluang untuk kelas '1' (Yes/Deposit)\n",
+    "probs = model.predict_proba(X_test)[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DataFrame hasil \n",
+    "leads_result = X_test.copy()\n",
+    "leads_result['Lead_Score'] = (probs * 100).round(1) # Jadikan skala 0-100\n",
+    "leads_result['Actual_Decision'] = y_test # Jawaban asli (untuk perbandingan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lead_Score</th>\n",
+       "      <th>Actual_Decision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3355</th>\n",
+       "      <td>96.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3316</th>\n",
+       "      <td>95.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3206</th>\n",
+       "      <td>94.8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3838</th>\n",
+       "      <td>94.8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5035</th>\n",
+       "      <td>94.7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5899</th>\n",
+       "      <td>94.7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4064</th>\n",
+       "      <td>94.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5118</th>\n",
+       "      <td>94.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4046</th>\n",
+       "      <td>94.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3328</th>\n",
+       "      <td>94.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Lead_Score  Actual_Decision\n",
+       "3355        96.2                1\n",
+       "3316        95.3                1\n",
+       "3206        94.8                1\n",
+       "3838        94.8                1\n",
+       "5035        94.7                1\n",
+       "5899        94.7                0\n",
+       "4064        94.6                1\n",
+       "5118        94.3                1\n",
+       "4046        94.2                1\n",
+       "3328        94.2                1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 10 Nasabah dengan Skor TERTINGGI (Hot Leads)\n",
+    "# Diurutkan dari skor tertinggi\n",
+    "display(leads_result[['Lead_Score', 'Actual_Decision']].sort_values(by='Lead_Score', ascending=False).head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Akurasi Model: 74.07%\n",
+      "ROC-AUC Score: 0.798 (Di atas 0.7 itu bagus!)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cek Akurasi Model\n",
+    "print(f\"\\nAkurasi Model: {accuracy_score(y_test, model.predict(X_test)):.2%}\")\n",
+    "print(f\"ROC-AUC Score: {roc_auc_score(y_test, probs):.3f} (Di atas 0.7 itu bagus!)\")"
+   ]
   }
  ],
  "metadata": {
